@@ -21,6 +21,9 @@ Post-v2.4.0
      targets to run a new system testsuite.  These tests can be run inside
      a Vagrant box.  See INSTALL.md for details
    - Dropped support for GRE64 tunnel.
+   - ovs-ofctl syntax for the "reg_load" action now validates inputs to
+     ensure they are of the format that the field accepts. Simply loading
+     hexadecimal values into any field will no longer work.
 
 
 v2.4.0 - 20 Aug 2015
